[package]
name = "c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
brotli = "3.3.4"
clap = { version = "4.4.0", features = ["derive"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
flate2 = "1.0.27"
lzma-rs = { version = "0.3.0", features = ["stream"] }
strum = { version = "0.25.0", features = ["derive"] }
xz2 = "0.1.7"
zstd = "0.12.4"
